refactor: changed signal output